0.05

0.04 2024-05-09T13:07:06+02:00
 - Add lang() and text() accessor for translations.

0.03 2024-05-02T15:25:55+02:00
 - Add tags_after() accessor.
 - Improve doc.
 - Update copyright years.

0.02 2023-06-27T02:02:44+02:00
 - Add support of autofocus.
 - Add support of login process.
 - Add support of logo.
 - Add support of messages.
 - Improve constructor parameters in doc.
 - Update tests to independent of package version.
 - Update minimal version of Plack::Component::Tags::HTML to 0.15.

0.01 2023-05-30T00:01:30+02:00
 - First version.