@@ -36,7 +36,7 @@ requires:
   Plack::Session: 0
   Plack::Util::Accessor: 0
   Tags::HTML::Container: 0
-  Tags::HTML::Login::Access: 0.1
+  Tags::HTML::Login::Access: 0.12
   perl: 5.8.0
 resources:
   bugtracker: https://github.com/michal-josef-spacek/Plack-App-Login-Password/issues
