@@ -296,8 +296,9 @@ EXAMPLE
      #               Login
      #             </legend>
      #             <p>
-     #               <label for="username" />
-     #               User name
+     #               <label for="username">
+     #                 User name
+     #               </label>
      #               <input type="text" name="username" id="username" />
      #             </p>
      #             <p>
