@@ -99,8 +99,9 @@ Plack::Runner->new->run($app);
 #               Login
 #             </legend>
 #             <p>
-#               <label for="username" />
-#               User name
+#               <label for="username">
+#                 User name
+#               </label>
 #               <input type="text" name="username" id="username" />
 #             </p>
 #             <p>
