@@ -1,4 +1,5 @@
 0.05
+ - Fix of label for username.
 
 0.04 2024-05-09T13:07:06+02:00
  - Add lang() and text() accessor for translations.
